fixed my email address
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@310 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -71,7 +71,7 @@ GeoTIFF spec, EPSG/POSC tables, and old libgeotiff source code.<p>
 Libgeotiff is a public domain library normally hosted on top of 
 <a href="http://www.libtiff.org/">libtiff</a> for reading, and writing 
 GeoTIFF information tags.  Please contact 
-<a href="mailto:warmerda@home.com">warmerda@home.com</a> for more 
+<a href="mailto:warmerdam@pobox.com">warmerdam@pobox.com</a> for more 
 information, or to get involved.<p>
 
 <ul>
@@ -132,7 +132,7 @@ message:<p>
 
 
 <hr>
-Comments? e-mail <a href="mailto:warmerda@home.com">warmerda@home.com 
+Comments? e-mail <a href="mailto:warmerdam@pobox.com">warmerdam@pobox.com 
 (Frank Warmerdam)</a>
 
 </body></html>
