added alt for image
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@311 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -4,7 +4,7 @@
 
 <body BGCOLOR="#FFFFFF">
 
-<img src="geotiff.gif" height=89 width=400><p>
+<img src="geotiff.gif" height=89 width=400 alt="GeoTIFF"><p>
 
 <i>Last Updated: 16 November, 2000</i><p>
 
