Added note on spherical nature.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@313 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/vandergrinten.html
+++ b/geotiff/html/proj_list/vandergrinten.html
@@ -77,6 +77,10 @@ Intergraph's
 files do.  I have omitted them from the above list, but I imagine they 
 may be added back.<p>
 
+Note that VanDerGrinten is a spherical projection.  Care must be taken
+translating between systems that derive a spherical radius approximation
+from the ellipsoid by different mechanisms.<p>
+
 <h3>PROJ.4 Organization</h3>
 
 <b>
