Fixed geotiff page link.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@331 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/spec/geotiff1.html
+++ b/geotiff/html/spec/geotiff1.html
@@ -163,7 +163,9 @@ Index Table added in  <a href="geotiff6.html#6.4">Section 6.4</a> to assist in l
    a closer match to EPSG/POSC terminology. All Revision 0.2
    names shall be recognized in a backward-compatible fashion.
  o The GeoTIFF web page addresses have been moved and may now be found at:
-    <a href="http://www.earthlink.net/~ritter/geotiff/geotiff.html">http://www.earthlink.net/~ritter/geotiff/geotiff.html</a>
+     http://www.earthlink.net/~ritter/geotiff/geotiff.html
+   (since moved to <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>)
+
 Revision 0.2:
  o South Oriented Gauss Conformal is Transverse Mercator with South
    pointing up, and so has been given a distinct code, rather than
