--- a/geotiff/html/spec/geotiff1.html
+++ b/geotiff/html/spec/geotiff1.html
@@ -154,7 +154,11 @@ Index Table added in  <a href="geotiff6.html#6.4">Section 6.4</a> to assist in l
  </tt>
 <img src="gifs/clrbar_half.gif">
  <h4><a name="1.2.3">1.2.3 Clarifications</a></h4>
-<pre>Revision 1.0:
+<pre>
+Revision 1.0.1:
+ o GeoTIFF web page and ftp site updated to remotesensing.org.
+
+Revision 1.0:
  o The former ModelTransformationTag (33920) conflicts with
    an internal Intergraph implementation and is being deprecated, 
    in favor of a new tag (34264, registered to JPL).
@@ -164,12 +168,12 @@ Index Table added in  <a href="geotiff6.html#6.4">Section 6.4</a> to assist in l
    names shall be recognized in a backward-compatible fashion.
  o The GeoTIFF web page addresses have been moved and may now be found at:
      http://www.earthlink.net/~ritter/geotiff/geotiff.html
-   (since moved to <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>)
 
 Revision 0.2:
  o South Oriented Gauss Conformal is Transverse Mercator with South
    pointing up, and so has been given a distinct code, rather than
    aliased to Transverse Mercator.
+
 Revision 0.1:
  o GeoTIFF-writers shall store the GeoKey entries in key-sorted order
    within the GeoKeyDirectoryTag. This is a change from preliminary
@@ -230,22 +234,22 @@ TBD: Sounding Datums and related parameters for Digital Elevation Models
 <img src="gifs/clrbar_half.gif">
  <h4><a name="1.3.1">1.3.1 Information and Support:</a></h4>
 <tt>The most recent version of the GeoTIFF spec, EPSG/POSC tables, and source
-code is available via anonymous FTP at the USGS site:</tt>
+code is available via anonymous FTP at the site:</tt>
 <pre>
-        <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/</a>
-   There are several subdirectories called spec/ tables/ and code/.
-   The USGS also has an archive of prototype GeoTIFF images at:
-        <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/images/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/images/</a>
+        <a href="ftp://ftp.remotesensing.org/geotiff">ftp://ftp.remotesensing.org/geotiff</a>
+   There are several subdirectories called spec/ tables/ and libgeotiff/.
+   There is also an archive of prototype GeoTIFF images at:
+        <a href="ftp://ftp.remotesensing.org/geotiff/samples/">ftp://ftp.remotesensing.org/geotiff/samples/</a>
 </pre><tt>Information
 and a hypertext version of the GeoTIFF spec is available via WWW at the
 following site:</tt>
 <pre>
-        <a href="http://www.earthlink.net/~ritter/geotiff/geotiff.html">http://www.earthlink.net/~ritter/geotiff/geotiff.html</a>
+     <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>
 </pre><tt>A
 mailing-list is currently active to discuss the on-going development of this
 standard. To subscribe to this list, send e-mail to:</tt>
 <pre>
-       GeoTIFF-request@tazboy.jpl.nasa.gov
+       majordomo@remotesensing.org
 </pre><tt>with
 no subject and the body of the message reading:</tt>
 <pre>
@@ -253,7 +257,7 @@ no subject and the body of the message reading:</tt>
 </pre><tt>To
 post inquiries directly to the list, send email to:</tt>
 <pre>
-       geotiff@tazboy.jpl.nasa.gov</pre><tt><p>
+       geotiff@remotesensing.org</pre><tt><p>
 <p>
  </tt>
 <img src="gifs/clrbar_half.gif">
