Updated some web, ftp and email addresses.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@333 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/spec/geotiffhome.html
+++ b/geotiff/html/spec/geotiffhome.html
@@ -4,8 +4,8 @@ GeoTIFF Format Specification<br>
 GeoTIFF Revision 1.0</h1>
 <tt><img src="../gifs/clrbar.gif"><p>
 </tt>
-<pre>   Specification Version: 1.8.1 
-   Last Modified: 31 October, 1995</pre><tt></tt>
+<pre>   Specification Version: 1.8.2
+   Last Modified: 28 December, 2000</pre><tt></tt>
 <h2> Click Here for <a href="contents.html"><img src="gifs/table.gif" alt="Table of Contents"></a> </h2>
  <h2>Authors:</h2>
 <tt></tt>
@@ -30,9 +30,9 @@ Roger Lott, Fredrik Lundh, and Jarle Land provided valuable information
 regarding projections, projection code databases and geodetics.
    
 GeoTIFF Mailing list:  
-    Posting: geotiff@tazboy.jpl.nasa.gov
-    Subscription: geotiff-request@tazboy.jpl.nasa.gov
-       (send message "subscribe geotiff your-name-here").</pre><tt>
+    Posting: geotiff@remotesensing.org
+    Subscription: majordomo@remotesensing.org
+       (send message "subscribe geotiff").</pre><tt>
   </tt>
  <h2>Disclaimers and Notes for This Version:</h2>
 <tt><p>
@@ -66,7 +66,7 @@ of this revision. <p>
 <pre>   Name                   Organization              Representing
    --------------------   -----------------------   ------------
    Niles Ritter           Jet Propulsion Labs       JPL Carto Group
-   Mike Ruth              SPOT Image Corp. (USA)     SPOT Image Corp. (USA)</pre><tt>
+   Mike Ruth              SPOT Image Corp. (USA)    SPOT Image Corp. (USA)</pre><tt>
   <p>
  </tt>
 </body></html>
