updated with info from Mapinfo
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@361 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -37,6 +37,7 @@
 <li> <a href="rosenmund_oblique_mercator.html">Rosenmund Oblique Mercator</a>
 <li> <a href="sinusoidal.html">Sinusoidal</a>
 <li> <a href="swiss_oblique_cylindrical.html">Swiss Oblique Cylindrical</a>
+<li> <a href="swiss_oblique_cylindrical.html">Swiss Oblique Mercator</a>
 <li> <a href="stereographic.html">Stereographic</a>
 <li> <a href="transverse_mercator.html">Transverse Mercator</a>
 <li> <a href="transverse_mercator_modified_alaska.html">Transverse Mercator 
