--- a/geotiff/html/proj_list/swiss_oblique_cylindrical.html
+++ b/geotiff/html/proj_list/swiss_oblique_cylindrical.html
@@ -11,6 +11,10 @@
 <td>Swiss Oblique Cylindrical
 <tr>
 
+<td>Alias
+<td>Swiss Oblique Mercator
+<tr>
+
 <td>EPSG Code
 <td>9814
 <tr>
@@ -81,6 +85,8 @@ an alias for CT_ObliqueMercator_Rosenmund, but the EPSG database says that
 it is accomodated by the Oblique Mercator method (9815).  I am not sure
 what to make of all this.  CT_ObliqueMercator_Rosenmund does not seem
 to be a supported method in EPSG.<p>
+
+In MapInfo this is projection 25, and is called Swiss Oblique Mercator.<p>
 
 If this is mapped onto Hotine Oblique Mercator, it isn't obvious to me
 what the settings for Azimuth, Angle from rectified grid, and scale at 
