Removed link to my geotiff projects page ... it is now gone.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@387 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -40,9 +40,6 @@ GeoTIFF spec, EPSG/POSC tables, and libgeotiff source code.<p>
 <li> Unofficial <a href="proj_list/">Catalog of Projections</a>
 and their parameters.<p>
 
-<li> <a href="http://gdal.velocet.ca/projects/tiff/gt_index.html">http://gdal.velocet.ca/projects/tiff/gt_index.html</a>: Frank Warmerdam's GeoTIFF notes, and
-sample files.<p>
-
 </ul>
 
 Somewhat out of date Resources:<p>
@@ -76,7 +73,7 @@ information, or to get involved.<p>
 
 <ul>
 
-<li> <a href="api/index.html">Libgeotiff API</a>: Partial documentation.<p>
+<li> <a href="api/globals.html">Libgeotiff API</a>: Partial documentation.<p>
 
 <li> <a href="http://www.remotesensing.org/cgi-bin/cvsweb.cgi/osrs/geotiff/">
 libgeotiff CVS Web Access</a><p>
