Fixed up the "t'" formula a bit at the suggestion of Miguel Filgueiras.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@388 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/lambert_conic_conformal_1sp.html
+++ b/geotiff/html/proj_list/lambert_conic_conformal_1sp.html
@@ -136,7 +136,7 @@ Northing values are:
 	* = *'/n +*0
 where
 	r' = *[(E - EF)2 + {rF - (N - NF)}2]1/2 , taking the sign of n
-	t' = (r'/aF)1/n
+	t' = (r'/(aF))1/n
 	*' = arctan [(E- EF)/(rF - (N- NF))]
 and n, F, and rF are derived as for the forward calculation.
 
@@ -154,7 +154,9 @@ with n, F and r0 as before and
 
 	*' = arctan[(E - FE)/{r0 -(N - FN)}]
 	r' = *[(E - FE)2 + {r0 - (N - FN)}2]1/2
-	t' = (r'/ak0F)1/n","For Projected Coordinate System JAD69 / Jamaica National Grid
+	t' = (r'/(ak0F))1/n
+
+For Projected Coordinate System JAD69 / Jamaica National Grid
 
 Parameters:
 Ellipsoid:  Clarke 1866, a = 6378206.400 m., 1/f = 294.97870
@@ -186,7 +188,7 @@ m0     =  0.95136402
 r'        =  19643955.26
 
 Then Latitude     = 17 deg 55 min 55.800 sec N
-         Longitude  = 76 deg 56 min 37.260 sec W
+     Longitude    = 76 deg 56 min 37.260 sec W
 </pre>
 
 <h3>Email from Gerald Evenden</h3>
