fixed suggested by Miguel Filgueiras
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@399 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/mercator_1sp.html
+++ b/geotiff/html/proj_list/mercator_1sp.html
@@ -132,7 +132,7 @@ where *1 is the absolute value of the first standard parallel (i.e. positive).
 Then, for both one and two standard parallel cases, 
 
 	E = FE + ak0(* - *0)              
-	N = FN + ak0 logn{tan(*/4 + */2)[(1 - esin*)(1 + esin*)]e/2 }                     
+	N = FN + ak0 logn{tan(*/4 + */2)[(1 - esin*) / (1 + esin*)]e/2 } 
            		where symbols are as listed above and logarithms are natural.
 	
 The reverse formulas to derive latitude and longitude from E and N values are:
@@ -142,7 +142,7 @@ The reverse formulas to derive latitude and longitude from E and N values are:
 		+ (7e6/120 +  81e8/1120) sin(6*)  + (4279e8/161280) sin(8*)
 
 where 		* = */2 - 2 arctan t
-		t = B (FN-N)/ak0   		
+		t = B (FN-N)/(ak0)
 		B = base of the natural logarithm, 2.7182818...
 		and  for the 2 SP Case, k0 is calculated as for the forward transformation 
 above.
