Fixed tables link.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@406 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/spec/geotiff2.5.html
+++ b/geotiff/html/spec/geotiff2.5.html
@@ -373,7 +373,7 @@ Most of the numerical coding systems and coordinate system definitions are
 based on the hierarchical system developed by EPSG/POSC. The complete set of
 EPSG tables used in GeoTIFF is available at:<p>
 <p>
-  <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl-mirror/tables">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl-mirror/tables</a><p>
+  <a href="ftp://ftp.remotesensing.org/geotiff/tables">ftp://ftp.remotesensing.org/pub/geotiff/tables</a><p>
 </tt>
 Appended below is the README.TXT file that accompanies the tables of defining
 parameters for those codes:</tt>
