updated contact info
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@408 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -21,8 +21,8 @@ Email: <A HREF="mailto:MIKE.RUTH@TELIGENT.COM">Mike.Ruth@teligent.com</A>
 </ADDRESS><p>
 
 <ADDRESS>
-Editor: <a href="http://members.home.com/warmerda/">Frank Warmerdam</a><br>
-Email: <A HREF="mailto:warmerda@home.com">warmerda@home.com</A>
+Editor: <a href="http://pobox.com/~warmerdam">Frank Warmerdam</a><br>
+Email: <A HREF="mailto:warmerdam@pobox.com">warmerdam@pobox.com</A>
 </ADDRESS><p>
 
 <HR>
@@ -32,7 +32,7 @@ to GeoTIFF, as well as pointers to significant resources on the WWW for
 further information.  Comments concerning this FAQ, and suggestions for 
 improvement and addition to the FAQ
 may be emailed to 
-<A HREF="mailto:warmerda@home.com">warmerda@home.com</A>.<P>
+<A HREF="mailto:warmerdam@pobox.com">warmerdam@pobox.com</A>.<P>
 
 For general WWW information and resources concerning GeoTIFF,
 please point your browser to 
