corrections from Frederic Trastour
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@415 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/lambert_conic_conformal_1sp.html
+++ b/geotiff/html/proj_list/lambert_conic_conformal_1sp.html
@@ -86,14 +86,15 @@
 
 <b>
 <pre>
-  +proj=lcc   +lat_0=<i>Latitude of natural origin</i> 
-              +lat_1=<i>Latitude of natural origin</i> 
-              +lon_1=<i>Longitude of natural origin</i>
-              +k_0=<i>Scale factor at natural origin</i>
-              +x_0=<i>False Origin Easting</i>
-              +y_0=<i>False Origin Northing</i>
+ +proj=lcc   +lat_1=Latitude of natural origin
+             +lon_0=Longitude of natural origin
+             +k_0=Scale factor at natural origin
+             +x_0=False Origin Easting
+             +y_0=False Origin Northing
 </pre>
 </b>
+
+(Provided by Frederic Trastour of Geoimage)<p>
 
 
 <h3>EPSG Notes</h3>
