Fixed PROJ.4 formulation.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@416 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/sinusoidal.html
+++ b/geotiff/html/proj_list/sinusoidal.html
@@ -76,9 +76,9 @@ imagine they may be added back.<p>
 
 <b>
 <pre>
-  +proj=robin +lon_0=<i>Longitude at projection center</i>
-              +x_0=<i>False Easting</i>
-              +y_0=<i>False Northing</i>
+  +proj=sinu +lon_0=<i>Longitude at projection center</i>
+             +x_0=<i>False Easting</i>
+             +y_0=<i>False Northing</i>
 </pre>
 </b>
 
