Fix spelling typo.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@423 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -610,7 +610,7 @@ To post inquiries directly to the list, send email to:
      
 <PRE>geotiff@remotesensing.org</PRE>
 
-An online archive of traffice is available on the web at:<p>
+An online archive of traffic is available on the web at:<p>
 
   <a href="http://www.remotesensing.org/geotiff/mail/maillist.html">http://www.remotesensing.org/geotiff/mail/maillist.html</a>
 
