fixed up table formatting
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@447 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/transverse_mercator.html
+++ b/geotiff/html/proj_list/transverse_mercator.html
@@ -114,56 +114,78 @@ the different forms of the Transverse Mercator projection and are used in the Ep
 Transverse Mercator projection method:
 <p>
 
- 
-<pre>
-TABLE 2
-Transverse Mercator
+<table border>
+<th>Name
+<th>Areas used
+<th>Central meridian(s)
+<th>Latitude of origin
+<th>CM Scale Factor
+<th>Zone width
+<th>False Easting at origin
+<th>False Northing at origin
 
-Name	Areas used	Central 
-meridian(s)	Latitude 
-of origin	CM 
-Scale 
-Factor	Zone width	False 
-Easting at 
-origin	False 
-Northing at 
-origin
-Transverse 
-Mercator	Various, 
-world wide 	Various	Various	Various	Usually less 
-than 6*	Various	Various
-							
-Transverse 
-Mercator 
-south oriented	South Africa	2* intervals 
-E of 11*E	0*	1.000000	2*	0m	0m
-							
-UTM North 
-hemisphere	World wide	6* intervals 
-E & W of 
-3* E & W	Always 0*	Always 
-0.9996	Always 6*	500000m	0m
-UTM South 
-hemisphere	World wide	6* intervals 
-E & W of  
-3* E  & W	Always 0*	Always 
-0.9996	Always 6*	500000m	10000000m
-Gauss-Kruger	Former USSR 
-Yugoslavia, 
-Germany,
-S. America	Various, 
-according to 
-area of cover	Usually 0*	Usually
-1.000000	Usually less 
-than 6*, 
-often less 
-than 4*	Various but 
-often 500000 
-prefixed by 
-zone number	Various
-Gauss Boaga	Italy	Various	Various	0.9996	6*	Various	0m
+<tr>
+<td>Transverse Mercator
+<td>Various, world wide
+<td>Various
+<td>Various
+<td>Various
+<td>Usually less than 6*
+<td>Various
+<td>Various
 
-</pre>
+<tr>
+<td>Transverse Mercator south oriented
+<td>South Africa
+<td>2* intervals E of 11*E
+<td>0*
+<td>1.000000
+<td>2*
+<td>0m
+<td>0m
+
+<tr>
+<td>UTM North hemisphere
+<td>World wide
+<td>6* intervals* E & W of 3* E & W
+<td>Always 0*	
+<td>Always 0.9996
+<td>Always 6*
+<td>500000m
+<td>0m
+
+<tr>
+<td>UTM South hemisphere
+<td>World wide	
+<td>6* intervals E & W of 3* E  & W	
+<td>Always 0*	
+<td>Always 0.9996
+<td>Always 6*
+<td>500000m
+<td>10000000m
+
+<tr>
+<td>Gauss-Kruger
+<td>Former USSR Yugoslavia, Germany, S. America	
+<td>Various, according to area of cover
+<td>Usually 0*
+<td>Usually 1.000000
+<td>Usually less than 6*, often less than 4*	
+<td>Various but often 500000 prefixed by zone number	
+<td>Various
+
+<tr>
+<td>Gauss Boaga
+<td>Italy
+<td>Various
+<td>Various
+<td>0.9996
+<td>6*
+<td>Various	
+<td>0m
+
+</table>
+<p>
 
 The most familiar and commonly used Transverse Mercator is the Universal Transverse 
 Mercator (UTM) whose natural origin lies on the equator. However, some territories use 
