Fixed typo as per note from Dave Burken.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@448 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/spec/geotiff6.html
+++ b/geotiff/html/spec/geotiff6.html
@@ -649,10 +649,9 @@ Values:
    32767            = user-defined
    [32768,  65535]  = Private User Implementations
 Special Ranges:
-1. For PCS utilizing GeogCS with code in range 4201 through 4321 
-(i.e. geodetic datum code 6201 through 6319): As far as is possible
- the PCS code will be of the format gggzz where ggg is (geodetic 
-datum code -4000) and zz is zone.
+1. For PCS utilizing GeogCS with code in range 4201 through 4321: As far 
+as is possible the PCS code will be of the format gggzz where ggg is 
+(geodetic datum code -4000) and zz is zone.
 2. For PCS utilizing GeogCS with code out of range 4201 through 4321 
 (i.e. geodetic datum code 6201 through 6319). PCS code 20xxx where 
 xxx is a sequential number.
