added guidance note 7 related info
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@482 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -68,6 +68,9 @@ Coordinates, Datums and Transformation Index</a> (offsite)
 with EPSG projection database used to generate 
 libgeotiff normalization csv files.<p>
 
+<li> <a href="guid7.html">EPSG Guidance Note # 7</a>: Describes various
+projection formulas, and some background information.<p>
+
 <li> <a href="Wkt_adam.zip">Wkt_adam.zip</a>: Text file relating EPSG 
 PCS/GCS codes to OpenGIS WKT representations, courtesy of Adam Gawne-Cain
 of Cadcorp.<p>
