--- a/geotiff/html/proj_list/oblique_mercator.html
+++ b/geotiff/html/proj_list/oblique_mercator.html
@@ -128,4 +128,8 @@ algorithms in which much code could or would be duplicated.   (Note: some
 folks call the Lambert 1SP case 'Lambert Tangential' which is only true if
 the scale factor value is unity - which it generally isn't).<p>
 
+More detailed notes on Oblique Mercator and related projection methods
+can be found in <a href="epsg_om.html">section 1.4.7</a> of the EPSG
+<a href="guid7.html">Guidance Note # 7</a>.<p>
+
 </body>
