--- a/geotiff/html/proj_list/swiss_oblique_cylindrical.html
+++ b/geotiff/html/proj_list/swiss_oblique_cylindrical.html
@@ -94,6 +94,8 @@ center should be ... likely 90, 90 and 1.0.<p>
 
 <h3>EPSG Notes</h3>
 
-Can be accomodated by Oblique Mercator method (code 9815).<p>
+Detailed notes on Swiss Oblique Mercator and related projection methods
+can be found in <a href="epsg_om.html">section 1.4.7</a> of the EPSG
+<a href="guid7.html">Guidance Note # 7</a>.<p>
 
 </body>
