--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -17,6 +17,7 @@
 <li> <a href="gall_stereographic.html">Gall Stereographic</a>
 <li> <a href="gnomonic.html">Gnomonic</a>
 <li> <a href="hotine_oblique_mercator.html">Hotine Oblique Mercator</a> 
+<li> <a href="krovak.html">Krovak</a>
 <li> <a href="laborde_oblique_mercator.html">Laborde Oblique Mercator</a> 
 <li> <a href="lambert_azimuthal_equal_area.html">Lambert Azimuthal Equal Area</a>
 <li> <a href="lambert_conic_conformal_1sp.html">Lambert Conic Conformal (1SP)</a> 
