Added wktproblems link, remove "csv" links.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@524 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -59,11 +59,13 @@
 <li> <a href="http://users.netonecom.net/~rburtch/geodesy/datums.html">The
 Coordinates, Datums and Transformation Index</a> (offsite)
 
+<!---
 <li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=horiz_cs/FIELDS=0,1,5,7,8,14/CODE>3999/CODE<5000">EPSG GCS Code Table</a>
 
 <li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=horiz_cs/FIELDS=0,1,5,13,15,16/CODE>4999">EPSG PCS Code Table</a>
 
 <li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=trf_method/CODE>9617">EPSG Projection Transformations</a>
+-->
 
 <li> <a href="http://www.epsg.org/">EPSG Geodesy Web Page</a>, 
 with EPSG projection database used to generate 
@@ -75,6 +77,9 @@ projection formulas, and some background information.<p>
 <li> <a href="Wkt_adam.zip">Wkt_adam.zip</a>: Text file relating EPSG 
 PCS/GCS codes to OpenGIS WKT representations, courtesy of Adam Gawne-Cain
 of Cadcorp.<p>
+
+<li> <a href="http://gdal.velocet.ca/~warmerda/wktproblems.html">OGC WKT 
+Coordinate System Issues</a><p>
 
 <li> <a href="http://www.geocities.com/CapeCanaveral/1224/mapref.html">MapRef</a>
 
