*** empty log message ***
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@525 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -69,17 +69,17 @@ Coordinates, Datums and Transformation Index</a> (offsite)
 
 <li> <a href="http://www.epsg.org/">EPSG Geodesy Web Page</a>, 
 with EPSG projection database used to generate 
-libgeotiff normalization csv files.<p>
+libgeotiff normalization csv files.
 
 <li> <a href="guid7.html">EPSG Guidance Note # 7</a>: Describes various
-projection formulas, and some background information.<p>
+projection formulas, and some background information.
 
 <li> <a href="Wkt_adam.zip">Wkt_adam.zip</a>: Text file relating EPSG 
 PCS/GCS codes to OpenGIS WKT representations, courtesy of Adam Gawne-Cain
-of Cadcorp.<p>
+of Cadcorp.
 
 <li> <a href="http://gdal.velocet.ca/~warmerda/wktproblems.html">OGC WKT 
-Coordinate System Issues</a><p>
+Coordinate System Issues</a>
 
 <li> <a href="http://www.geocities.com/CapeCanaveral/1224/mapref.html">MapRef</a>
 
