Added Equidistant Cylindrical link.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@535 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -12,6 +12,7 @@
 <li> <a href="eckert_iv.html">Eckert IV</a>
 <li> <a href="eckert_vi.html">Eckert VI</a>
 <li> <a href="equidistant_conic.html">Equidistant Conic</a>
+<li> <a href="equirectangular.html">Equidistant Cylindrical</a>
 <li> <a href="equirectangular.html">Equirectangular</a>
 <li> <a href="transverse_mercator.html">Gauss-Kruger</a> 
 <li> <a href="gall_stereographic.html">Gall Stereographic</a>
