added GeoTIFF-JAI, and updated geotiff.org status
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@549 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -24,9 +24,12 @@ This is the <b>official release version</b> of the GeoTIFF spec.<p>
 <li> <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>: Primary GeoTIFF web site (this 
 page).<p>
 
+<li> <a href="http://sourceforge.net/projects/geotiff-jai">GeoTIFF-JAI</a>:
+Niles Ritters project for a Java GeoTIFF API.<p>
+
 <li> <a href="http://www.geotiff.org/">http://www.geotiff.org/</a>: 
-Niles Ritters GeoTIFF Site (home of Java GeoTIFF packages, and GeoTIFF 2.0
-Specification Development).<p>
+Niles Ritters GeoTIFF Site (home of GeoTIFF 1.5 and GeoTIFF 2.0
+Specification Development).  This site is currently unavailable.<p>
 
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/">ftp://ftp.remotesensing.org/pub/geotiff/</a>: Current archive of
 GeoTIFF spec, EPSG/POSC tables, and libgeotiff source code.<p>
