Uupdated "alive" notes.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@559 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -647,16 +647,16 @@ In a sense GeoTIFF has become a large success despite a light hand at the
 helm.<p>
 
 However, the quality of GeoTIFF implementations varies greatly, there are
-no means to do conformance testing on produced GeoTIFF files.  Attempts
-to flesh out parameter lists for complex projections, and to clarify issues
-of unit types and other problems has fallen by the wayside.  EPSG has
-released many improvements to the underlying projection and datum
-tables, but it isn't clear whether these apply to GeoTIFF.  Hopes of a
-GeoTIFF 2.0 specification have not been realized.<p>
+no means to do conformance testing on produced GeoTIFF files.<p>
 
-It is my (Frank Warmerdam) hope to reawaken the GeoTIFF community enough
-to at least provide a forum for discussion, and publicise evolving 
-practice with regard to GeoTIFF.<p>
+The GeoTIFF mailing list is still active, and is a good place to 
+ask questions about GeoTIFF topics.  As well, clarifications are developed
+there for details about the list of available projections, their parameters,
+units issues and so forth.  The libgeotiff reference library is also 
+periodically released with updates to the EPSG .csv tables, and bug fixes. 
+<p>
+
+In short, the GeoTIFF community is alive, but relatively quiet.  <p>
 
 </body>
 </html>
