Fixed up version/date info.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@561 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>GeoTIFF FAQ Revision 2.3, November, 2003</TITLE>
+<TITLE>GeoTIFF FAQ</TITLE>
 <META name="description"
 content="FAQ concerning GeoTIFF format for geographic raster image data.  
 GeoTIFF format makes satellite and aerial photos 
@@ -11,9 +11,9 @@ content="GeoTIFF raster satellite aerial imagery mapping">
 
 <BODY>
 
-<H1><A NAME="GeoTIFF FAQ Version 2.1">GeoTIFF FAQ Version 2.1</H1>
+<H1><A>GeoTIFF FAQ Version 2.3</H1>
 
-<h2>February, 1999 Revision</h2>
+<h2>Last Updated: November, 2003</h2>
 
 <ADDRESS>
 Author: Mike Ruth<BR>
