Fixed bad <A> tag.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@562 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/faq.html
+++ b/geotiff/html/faq.html
@@ -11,7 +11,7 @@ content="GeoTIFF raster satellite aerial imagery mapping">
 
 <BODY>
 
-<H1><A>GeoTIFF FAQ Version 2.3</H1>
+<H1>GeoTIFF FAQ Version 2.3</H1>
 
 <h2>Last Updated: November, 2003</h2>
 
