--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -69,7 +69,7 @@ GeoTIFF spec, EPSG/POSC tables, and old libgeotiff source code.<p>
 <h2>libgeotiff</h2>
 
 Libgeotiff is a public domain library normally hosted on top of 
-<a href="http://www.libtiff.org/">libtiff</a> for reading, and writing 
+<a href="http://www.remotesensing.org/libtiff/">libtiff</a> for reading, and writing 
 GeoTIFF information tags.  Please contact 
 <a href="mailto:warmerdam@pobox.com">warmerdam@pobox.com</a> for more 
 information, or to get involved.<p>
