added NNTP mailing list feed.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@590 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -116,6 +116,8 @@ Mail can be sent to
 Online 
 <a href="http://www.remotesensing.org/geotiff/mail/maillist.html">threaded 
 archives</a> are available for viewing on the web.<p>
+The GeoTIFF mailing list is also available by NNTP at
+<a href="news://news.gmane.org/gmane.comp.gis.geotiff">news://news.gmane.org/gmane.comp.gis.geotiff</a>.<p>
 
 To subscribe, or unsubscribe send email to 
 <a href="mailto:majordomo@remotesensing.org">majordomo@remotesensing.org</a> 
